<resources>
    <string name="app_name">Plankton</string>
    <string name="pick_date">pick a date</string>
    <string name="pick_time">pick a time</string>
    <string name="null_binding">Cannot access binding because it is null. Is the view visible?</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">Sign up</string>
    <string name="error_unknown">Something wrong, we will fix it soon</string>
    <string name="choose_replay_type">Choose replay type</string>
    <string name="single">SINGLE</string>
    <string name="daily">DAILY</string>
    <string name="weekly">WEEKLY</string>
    <string name="monthly">MONTHLY</string>
    <string name="yearly">YEARLY</string>
    <string name="custom">CUSTOM</string>
    <string name="apply">APPLY</string>
    <string name="create">Create</string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>
    <string name="delete_event_title">Delete Event</string>
    <string name="delete_event_message">Do you really want to delete an event?</string>
    <string name="error_internet">Check your internet connection</string>
    <string name="error_entered_data">Check entered data</string>
    <string name="error_invalid_data">Invalid email address or password</string>
    <string name="editing_personal_data">Editing personal data</string>
    <string name="change_user">Change user</string>
    <string name="save">SAVE</string>
    <string name="try_again">try again</string>
    <string name="authorisation_error">Authorisation error</string>
    <string name="authorisation_error_message">You are not authorized, please login again</string>
    <string name="connection_error_message">Connection error, please check your internet connection</string>
    <string name="unknown_error_message">Unknown error</string>
    <string name="no_account">Don\'t have an account? </string>
    <string name="wrong_email">wrong email</string>
    <string name="wrong_password">wrong password</string>
    <string name="user_not_found">wrong email or password</string>
    <string name="no_account">Don\'t have an account?\ </string>
</resources>